--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,8 +50,8 @@ a:hover {
 
 .site-header {
   border-bottom: 1px solid var(--color-border);
-  padding: 40px 0 20px;
-  margin-bottom: 40px;
+  padding: 20px 0 10px;
+  margin-bottom: 20px;
 }
 
 .site-title {
@@ -94,16 +94,16 @@ a:hover {
 
 /* Post List Styles */
 .post-preview {
-  margin-bottom: 60px;
+  margin-bottom: 25px;
   border-bottom: 1px solid var(--color-border);
-  padding-bottom: 40px;
+  padding-bottom: 15px;
 }
 
 .post-title {
   font-family: var(--font-sans);
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 600;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   line-height: 1.3;
   color: #000;
 }
@@ -125,9 +125,9 @@ a:hover {
 }
 
 .post-excerpt {
-  margin: 20px 0;
+  margin: 5px 0;
   font-size: 1.125rem;
-  line-height: 1.8;
+  line-height: 1.6;
 }
 
 .read-more {
@@ -145,17 +145,18 @@ a:hover {
 
 /* Post Page Styles */
 .post {
-  max-width: 700px;
+  max-width: 900px;
 }
 
 .post-content {
-  font-size: 1.125rem;
-  line-height: 1.9;
-  margin-top: 30px;
+  font-size: 1.2rem;
+  line-height: 1.7;
+  margin-top: 15px;
+  text-align: justify;
 }
 
 .post-content p {
-  margin-bottom: 1.5em;
+  margin-bottom: 0.3em;
 }
 
 .post-content h1,
@@ -166,8 +167,8 @@ a:hover {
 .post-content h6 {
   font-family: var(--font-sans);
   font-weight: 600;
-  margin-top: 2em;
-  margin-bottom: 1em;
+  margin-top: 0.6em;
+  margin-bottom: 0.25em;
   line-height: 1.3;
 }
 
@@ -190,17 +191,17 @@ a:hover {
 .post-content ul,
 .post-content ol {
   margin-left: 2em;
-  margin-bottom: 1.5em;
+  margin-bottom: 0.3em;
 }
 
 .post-content li {
-  margin-bottom: 0.5em;
+  margin-bottom: 0.05em;
 }
 
 .post-content blockquote {
   border-left: 4px solid var(--color-accent);
   padding-left: 1.5em;
-  margin: 2em 0;
+  margin: 1em 0;
   font-style: italic;
   color: var(--color-text-light);
 }
@@ -214,7 +215,7 @@ a:hover {
 }
 
 .post-content pre {
-  margin: 1.5em 0;
+  margin: 0.8em 0;
 }
 
 .post-content pre code {
@@ -225,7 +226,7 @@ a:hover {
 .post-content img {
   max-width: 100%;
   height: auto;
-  margin: 2em 0;
+  margin: 1em 0;
   border-radius: 5px;
 }
 
@@ -243,23 +244,23 @@ a:hover {
 }
 
 .katex-display {
-  margin: 1.5em 0;
+  margin: 0.8em 0;
 }
 
 /* Code syntax highlighting customization */
 .post-content pre[class*="language-"] {
   background-color: #282a36 !important;
   border-radius: 5px;
-  padding: 1.5em !important;
+  padding: 1em !important;
   overflow-x: auto;
-  margin: 1.5em 0;
+  margin: 0.8em 0;
 }
 
 .post-content pre[class*="language-"] code {
   color: #f8f8f2 !important;
   font-family: 'Fira Code', 'Courier New', monospace;
-  font-size: 0.9em;
-  line-height: 1.6;
+  font-size: 0.7em;
+  line-height: 1.4;
 }
 
 /* About Page */
@@ -270,8 +271,8 @@ a:hover {
 /* Site Footer */
 .site-footer {
   border-top: 1px solid var(--color-border);
-  margin-top: 80px;
-  padding: 40px 0;
+  margin-top: 40px;
+  padding: 20px 0;
   text-align: center;
 }
 
